MFC r291578:   mld_v2_dispatch_general_query() is used by mld_fasttimo_vnet() to send   a reply to the MLDv2 General Query. In case when router has a lot of   multicast groups, the reply can take several packets due to MTU limitation.   Also we have a limit MLD_MAX_RESPONSE_BURST == 4, that limits the number   of packets we send in one shot. Then we recalculate the timer value and   schedule the remaining packets for sending.   The problem is that when we call mld_v2_dispatch_general_query() to send   remaining packets, we queue new reply in the same mbuf queue. And when   number of packets is bigger than MLD_MAX_RESPONSE_BURST, we get endless   reply of MLDv2 reports.   To fix this, add the check for remaining packets in the queue.

PR:		204831


Former-commit-id: 24974a6b01a1c468f64dc691f34ed3dc78b6affa